Fix Alignment of Score Panel

--- a/app/assets/stylesheets/score/score_index.scss
+++ b/app/assets/stylesheets/score/score_index.scss
@@ -14,8 +14,8 @@
   display: inline-block;
   position: fixed;
   right: 3%;
-  top: 12.5%;
-  height: 68vh;
+  top: 14.5%;
+  height: 69vh;
   width: 23%;
   box-shadow: 0 0 1px 0 rgba(0,0,0,.3);
   border-radius: 2px;
